--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
+<!DOCTYPE html>
 <html>
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="style.css">
+        <title>Simple Interest Calculator</title>
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <div class="maindiv">
+            <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+            Amount <input type="number"  id="principal">  <br/>
+            Rate <input onchange="updateRate()" type="range"  id="rate" value="10.25" min="1" step="0.25" max="20"> <span id="rate_val">10.25%</span>  <br/>
+            No. of Years
+            <select id="years">
+                <option value="1">1</value>
+                <option value="2">2</value>
+                <option value="3">3</value>
+                <option value="4">4</value>
+                <option value="5">5</value>
+                <option value="6">6</value>
+                <option value="7">7</value>
+                <option value="8">8</value>
+                <option value="9">9</value>
+                <option value="10">10</value>
+            </select>  <br/>
 
-        <button onclick="compute()">Compute</button>
+            <button onclick="compute()">Compute Interest</button>
+            <br>
+            <span id="result"></span>
+            <footer>
+                &#169; This Calculator belongs to inquiloper
+            </footer>
+        </div>
+        
     </body>
 </html>
