--- a/index.html
+++ b/index.html
@@ -3,33 +3,46 @@
     <head>
         <script src="script.js"></script>
         <link rel="stylesheet" href="style.css">
-        <title>Simple Interest Calculator</title>
+        <title>Web App – Simple Interest Calculator</title>
     </head>
     <body>
         <div class="maindiv">
             <h1>Simple Interest Calculator</h1>
 
-            Amount <input type="number"  id="principal">  <br/>
-            Rate <input onchange="updateRate()" type="range"  id="rate" value="10.25" min="1" step="0.25" max="20"> <span id="rate_val">10.25%</span>  <br/>
-            No. of Years
-            <select id="years">
-                <option value="1">1</value>
-                <option value="2">2</value>
-                <option value="3">3</value>
-                <option value="4">4</value>
-                <option value="5">5</value>
-                <option value="6">6</value>
-                <option value="7">7</value>
-                <option value="8">8</value>
-                <option value="9">9</value>
-                <option value="10">10</value>
-            </select>  <br/>
+            <div class="innerdiv">
+                <div class="formrow">
+                    <span class="formlabel">Amount</span>
+                    <input type="number"  id="principal">  <br/>
+                </div>
+                <div class="formrow">
+                    <span class="formlabel">Rate</span>
+                    <input onchange="updateRate()" type="range"  id="rate" value="10.25" min="1" step="0.25" max="20"> <span id="rate_val">10.25%</span>  <br/>
+                </div>
+                <div class="formrow">
+                    <span class="formlabel">
+                        No. of Years
+                    </span>
+                    <select id="years">
+                        <option value="1">1</value>
+                        <option value="2">2</value>
+                        <option value="3">3</value>
+                        <option value="4">4</value>
+                        <option value="5">5</value>
+                        <option value="6">6</value>
+                        <option value="7">7</value>
+                        <option value="8">8</value>
+                        <option value="9">9</value>
+                        <option value="10">10</value>
+                    </select>  <br/>
+                </div>
 
-            <button onclick="compute()">Compute Interest</button>
-            <br>
-            <span id="result"></span>
+                <button onclick="compute()">Compute Interest</button>
+                <br>
+                <span id="result"></span>
+            </div>
+            
             <footer>
-                &#169; This Calculator belongs to inquiloper
+                &#169; Everyone Can Get Rich
             </footer>
         </div>
         
